feat: 实现命令行下载译文。